--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Test</title>
-  </head>
-  <body>
-    <h1>Test</h1>
-    <div>Lorem ipsum dolor sit.</div>
-  </body>
+    <head>
+        <meta charset='utf-8'/>
+    </head>
+    <body style="margin:0px">
+        <canvas id='game_canvas'>
+            <div id="framerate"></div>
+        </canvas>
+        
+        <script type="text/javascript" src="index.js"></script>
+    </body>
 </html>
