--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
         <meta charset='utf-8'/>
     </head>
     <body style="margin:0px">
-        <canvas id='game_canvas'>
-            <div id="framerate"></div>
-        </canvas>
-        
-        <script type="text/javascript" src="index.js"></script>
+        <div>Lorem ipsum!</div>
     </body>
 </html>
