--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset='utf-8'/>
-    </head>
-    <body style="margin:0px">
-        <div>Lorem ipsum!</div>
-    </body>
-</html>
+Lorem ipsum
